fixed overlap on top navigation bar

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /*handy for making background transparent: https://www.remove.bg/upload*/
+/*z-index only works on positioned elements (absolute, relative, fixed): https://stackoverflow.com/questions/15782078/bring-element-to-front-using-css*/
 
 .big_title {
     text-align: center;
@@ -450,6 +451,7 @@
 }
 .blogreview {
     display: block;
+    position: relative;
     margin-left: auto;
     margin-right: auto;
     max-width: 25%;
@@ -515,6 +517,7 @@
 }
 
 .nav_bar_1 {
+    z-index: 1000;
     list-style-type: none;
     margin: 0;
     padding: 0;
